--- a/music/musicCss/index.css
+++ b/music/musicCss/index.css
@@ -273,36 +273,41 @@
  .mv1{
     position: fixed;
     width: 840px;
-    height: 470px;
+    height: 520px;
     left: 50%;
-    top: 50%;
+    top: 52%;
     /* margin-top: -273px; */
     transform: translate(-50%, -50%); 
-    z-index: 440;
+    
     background-color: rgb(0, 0, 0);
   
  }
+ .mv1_father{
+  z-index: 940;
+ }
  .closeMv{
   
-   background-color: rgb(255, 28, 28);
-   top:60px;
+   background-color: rgb(255, 135, 65);
+   top:62px;
    right:0px;
    width:75px;
-   height:40px;
-   border-radius: 12px;
+   height:24px;
+  line-height: 24px;
    font-size: 15px;
   cursor: pointer;
-
-  border-style:ridge;
+  outline: none;
+  border:1px solid rgb(255, 135, 65);
   position:fixed;
-  border-width:5px;
-  border-color:#43e024;
-
-
-
-
-   /* left:30px; */
-   z-index: 450;
+   z-index: 980;
+   border-radius: 6px;
+ }
+ .closeMv:hover{
+  background-color:rgb(255, 17, 17);
+  
+  color:white;
+ }
+ .closeMv:active{
+  transform: translateY(3px);
  }
  .common{
   
@@ -356,6 +361,24 @@
     z-index: 17;
     
     
+  }
+  .closeJg{
+    float: right;
+    transform:scale(1.5,1);
+    color:rgb(206, 206, 206);
+    margin-top:-32px;
+    margin-right:-25px;
+    border:1px solid rgb(206, 206, 206);
+    height: 20px;
+    width: 20px;
+    text-align: center;
+    border-radius: 6px;
+    cursor: pointer;
+  }
+  .closeJg:hover{
+    font-weight: bold;
+    color:white;
+    border:1px solid white;
   }
   /* ————————————————————————————分隔线—————————————————————————————————— */
 
